--- a/Car_Shop/Views/Car/GetCars.cshtml
+++ b/Car_Shop/Views/Car/GetCars.cshtml
@@ -1,17 +1,121 @@
 ﻿@using Car_Shop.Domain
-@model IEnumerable<Car>
+@model List<Car>
 
 @{
 	ViewBag.Title = "title";
 	Layout = "_Layout";
 }
 
-@foreach (var car in Model)
+<style>
+	.card-buttons-group{
+		text-align: right;
+		padding: 10px
+	}
+</style>
+
+<div class="card-buttons-group">
+	<button class="btn btn-danger" id="hideCardsId">Скрыть</button>
+	<button class="btn alert-success" id="showCardsId">Показать</button>
+</div>
+
+<div style="padding: 10px;"></div>
+
+@if (Model.Count == 0)
 {
-	<p>@car.Name</p>
-	<p>@car.Model</p>
-	<p>@car.Description</p>
-	<p>@car.Price</p>
-	<p>@car.DateCreate</p>
+	<div class="card col-md-12">
+		<div class="row g-0">
+			<div class="col-md-4">
+				<img src="https://images.wallpaperscraft.ru/image/single/bmw_fary_podsvetka_137326_1200x720.jpg" class="img-fluid rounded-start rounded">
+			</div>
+			<div class="col-md-8">
+				<div class="card-body">
+					<h5 class="card-title text-center">Список машин пуст :(</h5>
+					<p class="card-text">
+						Список поплниться позже, не расстраивайтесь
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div style="padding: 10px;"></div>
+	<div class="card text-center">
+		<div class="card-header">
+			<ul class="nav nav-pills card-header-pills">
+				<li class="nav-item">
+					<a class="nav-link active" href="#">Active</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Link</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+				</li>
+			</ul>
+		</div>
+		<div class="card-body">
+			<h5 class="card-title">Special title treatment</h5>
+			<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+		</div>
+	</div>
+}
+else
+{
+	<div class="row">
+		@for (int i = 0; i < Model.Count; i++)
+		{
+			var car = Model[i];
+			<div class="row row-cols-1 col-md-4 text-center"> @* разметка страницы на балицу с элементами *@
+				<div class="col" style="padding: 10px;"> @* отступ колонок друг от друга *@
+					<div class="card">
+						<img src="https://images.wallpaperscraft.ru/image/single/mercedes_benz_s_class_w222_112850_800x600.jpg" class="card-img-top" alt="@car.Name">
+						<div class="card-body">
+							<h5 class="card-title">@car.Name</h5>
+							<p class="card-text">@car.Description</p>
+						</div>
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item">Стоимость: @car.Price руб</li>
+							<li class="list-group-item">@car.TypeCar</li>
+						</ul>
+						<div class="card-body">
+							@{
+								var id = i;
+								id = id + 2;
+							}
+							<a asp-controller="Car" asp-action="GetCar" asp-route-id="@id" class="card-link">Перейти</a>
+							@*<a asp-controller="Basket" asp-action="Add" asp-route-id="@id" class="card-link">Добавить</a>*@
+							@if(User.IsInRole("Admin"))
+							{
+								<hr/>
+								<a asp-controller="Car" asp-action="Delete" id="@id" class="btn btn-danger">Удалить</a>
+								<a asp-controller="Car" asp-action="Save" id="@id" class="btn btn-primary">Изменить</a>
+							}
+						</div>
+					</div>
+				</div>
+			</div>
+		}
+	</div>
 }
 
+@section pageScripts {
+    <script>
+        const hideCardElement = $('#hideCardsId');	// закидываем кнопку "Скрыть"
+        const showCardElement = $('#showCardsId');	// закидываем кнопку "Показать"
+        const cardElement = $('.card');				// закидываем все элементы типа "card"
+        
+        const interval = 1000;
+        
+        hideCardElement.click(function(){			// по клику элемента выполняется фунуция 
+            hideCardElement.hide(interval);
+            showCardElement.show(interval);
+            cardElement.hide(interval);
+        });
+        
+        showCardElement.click(function () {
+            hideCardElement.show(interval);
+            showCardElement.hide(interval);
+            cardElement.show(interval);
+        });
+    </script>
+}
