--- a/Car_Shop/Views/Car/Save.cshtml
+++ b/Car_Shop/Views/Car/Save.cshtml
@@ -1,4 +1,4 @@
-﻿@model Car_Shop.Domain.ViewModels.Car.CarViewModels;
+﻿@model Car_Shop.Domain.ViewModel.Car.CarViewModel;
 
 @{
 	ViewBag.Title = "Title";
@@ -17,7 +17,7 @@
 				<h3 class="mb-0 text-center paragraphHome">@textTitle</h3>
 			</div>
 			<div class="card-body">
-				<form asp-action="Save" enctype="multipart/form-data"> @*asp-controller="Car"*@
+				<form asp-action="Save" enctype="multipart/form-data">
 					<input asp-for="Id" hidden />
 					<div asp-validation-summary="All" style="font-size:23px; font-family:Impact, serif" class="text-danger text-center"></div>
 					<div class="form-group">
@@ -34,12 +34,12 @@
 					</div>
 					<div class="form-group">
 						<label asp-for="Description"></label>
-						<input asp-for="Description" class="form-control" type="text">
+						<textarea asp-for="Description" class="form-control" type="text"></textarea>
 					</div>
 					<div class="input-group mb-3">
-						<span class="input-group-tetx">руб</span>
+						<span class="input-group-text">руб</span>
 						<input asp-for="Price" class="form-control" type="text">
-						<span class="input-group-tetx">.00</span>
+						<span class="input-group-text">.00</span>
 					</div>
 					<div class="form-group">
 						<select class="form-control" asp-for="TypeCar" id="carTypeId"></select>
